# pyrig-runtime

./: README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
docs/: api.md  cli.md  index.md  plugins.md
src/pyrig_runtime/: __init__.py
src/pyrig_runtime/core/: __init__.py  constants.py  graph.py  strings.py  wrappers.py
src/pyrig_runtime/core/dependencies/: __init__.py  discovery.py  distribution.py  graph.py  subclass.py
src/pyrig_runtime/core/introspection/: __init__.py  classes.py  functions.py  inspection.py  modules.py  packages.py
src/pyrig_runtime/rig/: __init__.py
src/pyrig_runtime/rig/cli/: __init__.py  cli.py  main.py  shared_subcommands.py  subcommands.py
src/pyrig_runtime/rig/cli/cli/: __init__.py  cli.py
src/pyrig_runtime/rig/cli/commands/: __init__.py  version.py
tests/: conftest.py
tests/test_pyrig_runtime/test_core/: test_constants.py  test_graph.py  test_strings.py  test_wrappers.py
tests/test_pyrig_runtime/test_core/test_dependencies/: test_discovery.py  test_distribution.py  test_graph.py  test_subclass.py
tests/test_pyrig_runtime/test_core/test_introspection/: test_classes.py  test_functions.py  test_inspection.py  test_modules.py  test_packages.py
tests/test_pyrig_runtime/test_rig/test_cli/: test_cli.py  test_main.py  test_shared_subcommands.py  test_subcommands.py
tests/test_pyrig_runtime/test_rig/test_cli/test_cli/: test_cli.py
tests/test_pyrig_runtime/test_rig/test_cli/test_commands/: test_version.py
