[project]
name = "pyrig-runtime"
version = "3.1.2"
description = "Runtime dependency and library for projects built with pyrig."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.8",
]
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.urls]
Homepage = "https://github.com/Winipedia/pyrig-runtime"
Documentation = "https://Winipedia.github.io/pyrig-runtime"
Source = "https://github.com/Winipedia/pyrig-runtime"
Issues = "https://github.com/Winipedia/pyrig-runtime/issues"
Changelog = "https://github.com/Winipedia/pyrig-runtime/releases"

[project.scripts]
pyrig-runtime = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "pip-audit>=2.10.1",
    "prek>=0.4.8",
    "pyrig>=17.6.0",
    "pyrig-codecov>=3.0.10",
    "pyrig-fixtures>=2.2.2",
    "pyrig-pypi>=3.0.10",
    "pyrig-runtime-overrides>=2.0.13",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "rumdl>=0.2.28",
    "ty>=0.0.56",
    "typos>=1.48.0",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=pyrig_runtime --cov-branch --cov-report=term-missing --cov-fail-under=100 --cov-report=xml"

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]
